option('curses_backend',
  type: 'combo',
  choices: ['auto', 'curses', 'pdcurses'],
  value: 'auto',
  description: 'Which curses backend to use')

option('shlibs',
  type: 'combo',
  choices: ['all', 'pg', 'no'],
  value: 'all',
  description: 'Whether to link against dynamic libraries (all, pg, no)')

option('pgroot',
  type: 'string',
  value: '',
  description: 'Path to external PostgreSQL installation for libpq include and library lookup')

option('dep_prefix',
  type: 'string',
  value: '/usr',
  description: 'Prefix for curses etc lookup (default: /usr)')
